# docs/swagger.json
@@ -52,6 +52,29 @@
                 }
             }
         },
+        "/admin/token/refresh": {
+            "post": {
+                "description": "刷新token...",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "刷新token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.AuthAccountLoginRes"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/user": {
             "post": {
                 "security": [
@@ -186,17 +209,17 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "name": "size",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "name": "sort",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "page",
                         "in": "query"
                     }
                 ],
